syntax = "proto3";

package gs.service.permission;

import "konekko.me/gosion/commons/dto/commons.proto";

service Structure {

    rpc CreateUserStructure (CreateRequest) returns (gs.commons.dto.Status);

    rpc CreateFunctionStructure (CreateRequest) returns (gs.commons.dto.Status);

    rpc GetList (GetListRequest) returns (GetListResponse);

    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);
}

message GetInfoRequest {
    string structureId = 1;
}

message GetInfoResponse {
    gs.commons.dto.State state = 1;
    SimpleStructure data = 2;
}

message CreateRequest {
    string name = 1;
    string appId = 2;
}

message EnabledRequest {
    string structureId = 1;
    bool opening = 2;
}

message GetListRequest {
    string appId = 1;
    bool user = 2;
}

message GetListResponse {
    gs.commons.dto.State state = 1;
    repeated SimpleStructure data = 2;
}

message SimpleStructure {
    string name = 1;
    int64 createAt = 2;
    bool opening = 3;
    string id = 4;
    bool funcS = 5;
    int64 lastUpdateAt = 6;
}